[package]
name = "tokio-helloworld"
version = "0.1.0"
authors = ["k-yomo <kanji.yy@gmail.com>"]
edition = "2018"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.4"